objects/Policy__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alip_Application_Id__c</fullName>
        <label>Alip Application Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alip_Application_Status__c</fullName>
        <label>Alip Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Premium_Payment__c</fullName>
        <label>Initial Premium Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mode_Of_Payment__c</fullName>
        <label>Mode Of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Online Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_End_Date__c</fullName>
        <label>Policy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Start_Date__c</fullName>
        <label>Policy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Application Submitted</fullName>
                </value>
                <value>
                    <fullName>Policy issued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Qualification_Status__c</fullName>
        <label>Tax Qualification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Policy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>